fix accout number

--- a/1-2.sales-api-lambda/.env
+++ b/1-2.sales-api-lambda/.env
@@ -1,6 +1,6 @@
-HOSTNAME={YOUR_DATABASE_ENDPOINT}
+HOSTNAME=YOUR_DATABASE_ENDPOINT
 USERNAME=admin
 PASSWORD=12345678
 DATABASE=kbds
-TOPIC_ARN=arn:aws:sns:ap-northeast-2:{YOUR_ACCOUNT_NUMBER}:kbds-sns
+TOPIC_ARN=arn:aws:sns:ap-northeast-2:12345678:kbds-sns
 
